--- a/CommonLibrary/src/main/AndroidManifest.xml
+++ b/CommonLibrary/src/main/AndroidManifest.xml
@@ -1,9 +1,18 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.xiaozhu.library">
-    ·
+
     <application
         android:allowBackup="true"
         android:supportsRtl="true">
+        <!--查看图集-->
+        <activity
+            android:name=".activity.CheckAtlasActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/CheckAtlasTheme" />
+        <!--查看相册-->
+        <activity
+            android:name=".activity.PhotoAlbumActivity"
+            android:screenOrientation="portrait" />
         <!--异常界面-->
         <activity
             android:name=".activity.ExceptionActivity"
